--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
       margin-top: 5px;
       color: #ccc;
     }
-
     .container {
       max-width: 960px;
       margin: 30px auto;
@@ -31,7 +30,6 @@
       border-radius: 10px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
-
     #fileManagerToggle {
       display: block;
       margin: 0 auto 10px;
@@ -42,20 +40,17 @@
       border-radius: 5px;
       cursor: pointer;
     }
-
     #fileManager {
       max-height: 0;
       overflow: hidden;
-      transition: max-height 0.3s ease-in-out, opacity 0.3s ease-in-out;
+      transition: all 0.4s ease;
       opacity: 0;
       margin-bottom: 20px;
     }
-
     #fileManager.open {
-      max-height: 500px;
+      max-height: 1000px;
       opacity: 1;
     }
-
     .file-row {
       display: flex;
       align-items: center;
@@ -80,7 +75,6 @@
     .export-btn { background: #9c27b0; color: #fff; }
     .rename-btn { background: #ff9800; color: #fff; }
     .delete-btn { background: #f44336; color: #fff; }
-
     #uploadZone {
       border: 2px dashed #aaa;
       padding: 40px;
@@ -89,13 +83,11 @@
       margin-bottom: 20px;
       border-radius: 8px;
     }
-
     #uploadZone.dragover {
       border-color: #4CAF50;
       background: #f0fff0;
       color: #4CAF50;
     }
-
     #searchBox {
       display: block;
       margin: 0 auto 10px;
@@ -105,13 +97,11 @@
       border-radius: 5px;
       border: 1px solid #ccc;
     }
-
     #count {
       text-align: center;
       font-weight: bold;
       margin-bottom: 10px;
     }
-
     table {
       border-collapse: collapse;
       width: 100%;
@@ -135,23 +125,17 @@
     滤芯数据管理系统 💼
     <div id="currentFile">当前文件：未选择</div>
   </header>
-
   <div class="container">
     <button id="fileManagerToggle">📁 管理文件（点击展开/关闭）</button>
     <div id="fileManager"></div>
-
-    <div id="uploadZone">
-      拖拽 Excel 文件到这里上传 或 <input type="file" id="uploadFile" accept=".xlsx">
-    </div>
-
+    <div id="uploadZone">拖拽 Excel 文件到这里上传 或 <input type="file" id="uploadFile" accept=".xlsx"></div>
     <input type="text" id="searchBox" placeholder="搜索全部字段…">
     <div id="count"></div>
     <div id="results"></div>
   </div>
-
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
   <script>
-    let data = [];
+        let data = [];
     const LOCAL_PREFIX = "xlsx_";
     let currentKey = "";
 
@@ -165,11 +149,11 @@
     }
 
     function renderResults(results) {
-      document.getElementById("count").textContent = `共 ${results.length} 条结果`;
-      if (!results.length) {
-        document.getElementById("results").innerHTML = "<p style='text-align:center;'>没有结果 😪</p>";
-        return;
-      }
+      document.getElementById("count").textContent = results.length ? `共 ${results.length} 条结果` : '';
+      document.getElementById("results").innerHTML = results.length ? renderTable(results) : '';
+    }
+
+    function renderTable(results) {
       let html = "<table><tr>";
       const keys = Object.keys(results[0]);
       keys.forEach(k => html += `<th>${k}</th>`);
@@ -177,10 +161,10 @@
       results.forEach(row => {
         html += "<tr>";
         keys.forEach(k => html += `<td>${row[k] || ""}</td>`);
-        html += "</tr>";
+        html += "</tr>`;
       });
       html += "</table>";
-      document.getElementById("results").innerHTML = html;
+      return html;
     }
 
     function saveToLocal(key, json) {
@@ -193,7 +177,7 @@
       data = JSON.parse(raw);
       currentKey = key;
       document.getElementById("currentFile").textContent = `当前文件：${key}`;
-      renderResults(data);
+      renderResults([]);
       return true;
     }
 
@@ -204,13 +188,14 @@
         const k = localStorage.key(i);
         if (!k.startsWith(LOCAL_PREFIX)) continue;
         const name = k.slice(LOCAL_PREFIX.length);
+        const raw = JSON.parse(localStorage.getItem(k));
 
         const row = document.createElement("div");
         row.className = "file-row";
 
         const span = document.createElement("span");
         span.className = "file-name";
-        span.textContent = name;
+        span.textContent = `${name}（${raw.length} 条）`;
 
         const input = document.createElement("input");
         input.placeholder = "新名称";
@@ -227,6 +212,7 @@
           updateFileManager();
           document.getElementById("currentFile").textContent = `当前文件：${currentKey}`;
         });
+
         const btnDelete = createBtn("删除", "delete-btn", () => {
           if (confirm("确定删除？")) {
             localStorage.removeItem(LOCAL_PREFIX + name);
@@ -260,9 +246,8 @@
 
     document.getElementById("searchBox").addEventListener("input", e => {
       const q = e.target.value.trim();
-      renderResults(q ? fuzzySearch(q) : data);
+      renderResults(q ? fuzzySearch(q) : []);
     });
-
     document.getElementById("uploadFile").addEventListener("change", e => {
       const file = e.target.files[0];
       if (file) handleFile(file);
@@ -304,7 +289,7 @@
         saveToLocal(filename, data);
         currentKey = filename;
         document.getElementById("currentFile").textContent = `当前文件：${filename}`;
-        renderResults(data);
+        renderResults([]); // ❗不自动显示，等你搜索再显示
         updateFileManager();
       };
       reader.readAsArrayBuffer(file);
@@ -317,19 +302,17 @@
       XLSX.writeFile(wb, `${name}.xlsx`);
     }
 
-    // 切换文件管理面板
     document.getElementById("fileManagerToggle").addEventListener("click", () => {
       const fm = document.getElementById("fileManager");
       fm.classList.toggle("open");
       updateFileManager();
     });
 
-    // 尝试恢复最近一个文件
     window.onload = () => {
       for (let i = 0; i < localStorage.length; i++) {
         const k = localStorage.key(i);
-        if (k.startsWith(LOCAL_PREFIX)) {
-          const name = k.slice(LOCAL_PREFIX.length);
+        if (k.startsWith("xlsx_")) {
+          const name = k.slice(5);
           if (loadFromLocal(name)) break;
         }
       }
@@ -337,3 +320,4 @@
   </script>
 </body>
 </html>
+
